--- a/action.yaml
+++ b/action.yaml
@@ -1,11 +1,7 @@
 name: "Home Assistant Configuration Check"
-author: "Ludeeus <hi@ludeeus.dev>"
-description: "Check your configuration for a against Home Assistant versions."
+author: "Kevin Stark <kev.stark@gmail.com>"
+description: "Check your configuration for Home Assistant."
 inputs:
-  version:
-    description: "The version to use of Home Assistant ('DEV', 'RC', 'STABLE')"
-    required: false
-    default: 'STABLE'
   config_path:
     description: "Relative path to your configuration directory if not in the root"
     required: false
