--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: "Home Assistant Configuration Check"
+name: "Home Assistant Fast Config Check"
 author: "Kevin Stark <kev.stark@gmail.com>"
 description: "Check your configuration for Home Assistant."
 inputs:
