--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 homeassistant 
-colorlog 
+colorlog==4.1.0
 paho-mqtt 
 aiohttp_cors 
 home-assistant-frontend
 hass-nabucasa
-PyNaCl
-emoji
+PyNaCl==1.3.0
+emoji==0.5.4
 defusedxml
 netdisco
 sqlalchemy
-psutil
+psutil==5.7.0
