--- a/.github/workflows/ha-release.yaml
+++ b/.github/workflows/ha-release.yaml
@@ -2,8 +2,9 @@ name: "Capture Home Assistant Release"
 
 on:
   schedule:
-    - cron:  '0 */1 * * *'
-
+    - cron:  '0 * * * *'
+  workflow_dispatch:
+  
 jobs:
   build:
     name: Check Latest Home Assistant Release
