--- a/.github/workflows/ha-release.yaml
+++ b/.github/workflows/ha-release.yaml
@@ -2,7 +2,7 @@ name: "Capture Home Assistant Release"
 
 on:
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '0 0 * * *'
   workflow_dispatch:
   
 jobs:
