--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-async-upnp-client==0.14.13
-colorlog==4.1.0
-paho-mqtt 
+aiohttp_cors==0.7.0
 aiohttp==3.7.1
-yarl==1.4.2
-homeassistant 
-home-assistant-frontend
-hass-nabucasa
-PyNaCl==1.3.0
-emoji==0.5.4
+async-upnp-client==0.14.13
+colorlog
 defusedxml
+emoji==0.5.4
+hass-nabucasa
+home-assistant-frontend
+homeassistant 
 netdisco
-sqlalchemy
+paho-mqtt 
+pillow
 psutil==5.7.0
+PyNaCl==1.3.0
 speedtest-cli==2.1.2
+sqlalchemy
+yarl==1.4.2
