--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 aiohttp_cors==0.7.0
 aiohttp==3.7.1
 async-upnp-client==0.14.13
-colorlog
+colorlog==4.5.0
+cryptography==3.2
 defusedxml
 emoji==0.5.4
 hass-nabucasa
@@ -9,7 +10,6 @@ home-assistant-frontend
 homeassistant 
 netdisco
 paho-mqtt 
-pillow
 psutil==5.7.0
 PyNaCl==1.3.0
 speedtest-cli==2.1.2
